Revision History for Perl module Math::Expression::Evaluator

0.0.5
- Added "See Also" list to MEE documentation

0.0.4 Wed Sep 19 17:51:01 CEST 2007
- add variables() method
- more documentation on optimization
- added another optimization method (flattening)
- test that prove optimize() actually does something

0.0.3 Tue Sep 18 08:21:21 CEST 2007
- Dropped 'use Regexp::Common' 

0.0.2 Mon Sep 17 13:34:27 CEST 2007
- Splitted MEE::Util and MEE::Parser from main module
- Added optimize() and the underlying MEE::Optimizer
- Most tests now run once with optimize() and once without
- Added LICENSE section to ME::Evaluator
- Dropped Regexp::Common dependency
- Added this Changes file

0.0.1 Mon Sep 10 13:13:13 CEST 2007
- Initial release